--- a/configuracion/css/estilos.css
+++ b/configuracion/css/estilos.css
@@ -1,342 +1,414 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-/*INICIO DE LAS CARD*/
-body{
-    background-color: #9a9da0;
-}
-.container_card{
-    max-width: 1200px;
-    padding: 20px;
-    padding-bottom: 40px;
-    margin: auto;
-    margin-top: 60px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center
-}
-
-.card{
-    width: 300px;
-    position: relative;
-    margin: 20px;
+/* es color principal en Hex es #343a40 */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
     font-family: 'Poppins', sans-serif;
-    transition: all 300ms;
-    border-radius: 20px;
 }
-
-.card:hover{
-    box-shadow: 1px 1px 20px -10px #20202049;
-}
-
-.card:hover .descripcion{
-    margin-top: 0;
-    border-radius: 0px 0px 20px 20px;
-
-}
-
-.card:hover .icon{
-    margin-top: -110px;
-    border-radius: 20px 20px 0px 0px;
-}
-
-.icon{
-    width: 100%;
-    height: 220px;
-    background: #EFF3F5;
-    padding: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.container__all{
     position: relative;
-    z-index: 1;
-    transition: all 400ms cubic-bezier(0.5,0,0,1);
-    border-radius: 20px;
+    right: 0;
+    transition: all 300ms;
 }
-
-.icon i{
-    font-size: 150px;
-    color: #fff;
-    transition: all 400ms cubic-bezier(0.5,0,0,1);
-}
-
-.descripcion{
+header{
     width: 100%;
-    height: 220px;
-    color: #474747;
-    background: #EFF3F5;
-    padding: 20px;
-    margin-top: -220px;
-    transition: all 400ms cubic-bezier(0.5,0,0,1);
-    border-radius: 20px;
+    height: 100px;
+    font-family: 'Poppins', sans-serif;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 100;
+
 }
-
-.descripcion p{
-    font-size: 14px;
-    margin-top: 10px;
-    display: -webkit-box;
-    display: -moz-box;
-    display: box;
-    -webkit-box-orient: vertical;
-    -moz-box-orient: vertical;
-    box-orient: vertical;
-    -webkit-line-clamp: 5;
-    line-clamp: 5;
-    overflow: hidden;
+.move_content{
+    right: 180px;
 }
-
-.descripcion input{
-    margin-top: 20px;
-    padding: 10px 40px;
-    background: rgba(52,58,64,255);
-    color: white;
-    font-weight: 500;
-    font-size: 14px;
-    cursor: pointer;
-    border: none;
-    border-radius: 20px;
-    box-shadow: 1px 1px 30px -5px #20202049;
-    transition: box-shadow 300ms;
-}
-
-.descripcion input:hover{
-    box-shadow: 1px 1px 30px -5px #20202070;
-}
-/*COLOR DE LAS CARD*/
-
-.c1:hover .icon{
-    background: #798795;
-}
-
-.c1 .icon i{
-    color: #798795;
-}
-
-.c1:hover .icon i{
-    color: #fff;
-}
-
-
-.c2:hover .icon{
-    background: #798795;
-}
-
-.c2 .icon i{
-    color: #798795;
-}
-
-.c2:hover .icon i{
-    color: #fff;
-}
-
-
-.c3:hover .icon{
-    background: #798795;
-}
-
-.c3 .icon i{
-    color: #798795;
-}
-
-.c3:hover .icon i{
-    color: #fff;
-}
-
-/*FIN DE LAS CARD*/
-/*:::::Pie de Pagina*/
-.pie-pagina{
-    width: 100%;
-    background-color: rgba(52,58,64,255);
-}
-.pie-pagina .grupo-1{
-    width: 100%;
+.container_header{
     max-width: 1200px;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
     margin: auto;
-    display:grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap:50px;
-    padding: 45px 0px;
+    padding: 0px 20px;
 }
-.pie-pagina .grupo-1 .box figure{
-    width: 100%;
+header .logo{
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.pie-pagina .grupo-1 .box figure img{
-    width: 250px;
+.logo img {
+    width: 100px;
 }
-.pie-pagina .grupo-1 .box h2{
-    color: #fff;
-    margin-bottom: 25px;
-    font-size: 20px;
+.container__nav{
+    position: relative;
+    height: 100%;
+
 }
-.pie-pagina .grupo-1 .box p{
-    color: #efefef;
-    margin-bottom: 10px;
+nav{
+    height: 100%;
 }
-.pie-pagina .grupo-1 .red-social a{
-    display: inline-block;
-    text-decoration: none;
-    width: 45px;
-    height: 45px;
-    line-height: 45px;
-    color: #fff;
-    margin-right: 10px;
-    background-color: rgba(52,58,64,255);
-    text-align: center;
-    transition: all 300ms ease;
+nav ul{
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.pie-pagina .grupo-1 .red-social a:hover{
-    color: rgb(7, 96, 213);
+nav ul li {
+    margin: 0px 20px;
+    list-style: none;
 }
-.pie-pagina .grupo-2{
-    background-color: #1e1e1f;
-    padding: 15px 10px;
-    text-align: center;
-    color: #fff;
-}
-.pie-pagina .grupo-2 small{
-    font-size: 15px;
-}
-@media screen and (max-width:800px){
-    .pie-pagina .grupo-1{
-        width: 90%;
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap:30px;
-        padding: 35px 0px;
-    }
-}
-/*:::::Fin Pie de Pagina*/
-/* es color principal en Hex es #343a40 */
-/* diseño del card banner*/
-/* CARDS BANNER ONE */
-.cards-banner-one {
-    width: 100%;
-    height: 350px;
-    background-color: #24292d;
-    margin-bottom: 40px;
-  }
-  
-  .cards-banner-one .content {
-    width: 40%;
-    padding: 90px 0 0 30px;
-    color: #fff;
-  }
-  
-  .cards-banner-one p,
-  .cards-banner-two p {
-    margin: 10px 0 20px 0;
-  }
-  .content input{
-    margin-top: 20px;
-    padding: 10px 40px;
-    background: rgba(52,58,64,255);
-    color: white;
-    font-weight: 500;
+nav ul li a{
+    color: #373737;
     font-size: 14px;
+}
+.select{
+    background: #343a40 ;
+    padding: 10px 30px;
+    color: white;
+    border-radius: 20px;
+}
+
+.nav_mod{
+    height: 70px;
+    box-shadow: 1px 1px 10px 0px #00000010;
+    background: #fff;
+}
+.btn__menu{
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    transition: background 300ms;
+    display: none;
+}
+.btn__menu:hover{
+    background-color: #f3f3f3;
+}
+
+/* Portada */
+.cover{
+    width: 100%;
+    padding-bottom: 60px;
+    font-family: 'Poppins', sans-serif;
+    margin-top: 100px;
+}
+.container__cover{
+    max-width: 1200px;
+    margin: auto;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    background-image: url(../../img/background-cover.svg);
+    background-size: cover;
+    background-position: bottom;
+}
+.cover .container__info{
+    max-width: 400px;
+    margin-top: 40px;
+    z-index: 2;
+}
+.cover h1{
+    max-width: 400px;
+    font-size: 60px;
+    font-weight: 900;
+    color: #373737;
+}
+.cover h2{
+    font-size: 60px;
+    font-weight: 900;
+    color: #484e53;
+    margin-top: -30px;
+}
+.cover p{
+    margin-top: 10px;
+    color: #373737;
+}
+.cover input[type="button"]{
+    padding: 10px 40px;
+    margin-top: 40px;
+    font-size: 18px;
+    font-weight: 600;
     border: none;
+    color: #fff;
+    background: #484e53;
     border-radius: 20px;
     box-shadow: 1px 1px 30px -5px #20202049;
-    transition: box-shadow 300ms;
+    cursor: pointer;
+    transition: box-shadow 500ms;
 }
-.content input:hover{
-    box-shadow: 1px 1px 30px -5px #20202070;
+.cover input[type="button"]:hover{
+    box-shadow: 1px 1px 30px -5px #20202080;
 }
-/* Section diseño */
-.seccion1{
-    width: 100%;
-    height: 350px;
-    background-color: #484e53;
+.container__vector{
+    position: relative;
+
 }
-/* diseño de los mini contenedores */
-.contenedor_grid {
-	width: 90%;
-	max-width: 1200px;
-	margin: auto;
-	padding: 40px 0;
-    display: flex;
-    gap: 20px;
-	
+.container__vector img{
+    position: absolute;
+    bottom: 10px;
+    right: 0px;
+    width: 600px;
+    animation: move_vector 6s ease-in-out infinite;
 }
-.titulo {
-	font-size: 24px;
-	padding: 20px 0;
+@keyframes move_vector{
+    0%{
+        transform: translateY(10px);
+    }
+    25%{
+        transform: translateY(-10px);
+    }
+    100%{
+        transform: translateY(10px);
+    }
 }
-.contenedor_xd{
-    width: 70%;
+@media screen and (max-width: 920px){
+    .container__vector img{
+        width: 500px;
+    }
+}
+
+@media screen and (max-width:760px){
+    .container__nav{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .btn__menu{
+        display: flex;
+    }
+    nav{
+        height: 100%;
+        background-color: #d6d8d9;
+        position: fixed;
+        top: 0;
+        right: -180px;
+        padding: 0px 40px;
+        transition: all 300ms;
+    }
+    .move_nav{
+        right: 0;
+    }
+    nav ul{
+        flex-direction: column;
+    }
+     nav ul li{
+         margin: 20px 0px;
+
+     }
+     .container__vector img{
+        transform: scale(0);
+        animation: none;
+    }
+}
+/* Card hover */
+main{
+    margin-top: 20px;
+    padding-bottom: 100px;
+}
+main h1{
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 50px;
+    color: #373737;
+}
+.container__box{
+    max-width: 1100px;
+    margin: auto;
+    margin-top: 40px;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    justify-content: center;
+}
+.box{
+    width: 181px;
+    height: 200px;
+    background: #f3f3f3;
+    margin: 1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+    transition: all 300ms ease;
+    position: relative;
 }
 
-.cardd {
-	border-radius: 10px;
-	min-height: 200px;
-	font-weight: bold;
-	padding: 20px;
-	position: relative;
-	overflow: hidden;
-	background-size: cover;
-	background-position: center center;
-    width: calc(33.33% - 20px);
-	
+.box:hover{
+    transform: scale(1.1);
+    box-shadow: 0px 0px 30px -15px rgba(0, 0, 0, 0.5);
+    background-color: #343a40;
+    z-index: 1;
 }
-.cardd .textos {
-	height: 100%;
-	color: #fff;
-	display: flex;
-    flex-direction: column;
+
+.box i{
+    font-size: 55px;
+    color: #343a40;
+}
+.box:hover i{
+    color:#fff
+}
+.box h5{
+    margin-top: 20px;
+    text-transform: uppercase;
+    font-size: 10px;
+    color: #777777;
+}
+.box:hover h5{
+    color: #fff;
+    opacity: 0;
+}
+.box h4{
+    text-transform: uppercase;
+    font-size: 14px;
+    color: #fff;
+    position: absolute;
+    bottom: 50px;
+    filter: blur(5px);
+    opacity: 0;
+}
+.box:hover h4{
+    font-size: 10px;
+    opacity: 1;
+    filter: blur(0px);
+    color: #fff;
+    transition: all 600ms ease;
+}
+/* Fin Card hover */
+/* parallax */
+.container__banner{
+    max-width: 1200px;
+    margin: auto;
+    margin-top: 80px;
+}
+.banner{
+    height: 250px;
+    display: flex;
+    align-items: center;
+    background: #121214;
+    position: relative;
+}
+.banner .icon{
+    width: 40%;
+}
+.banner .text{
+    width: 60%;
+    position: relative;
+}
+.banner .text h2{
+    color: white;
+    font-size: 32px;
+    font-weight: 400;
+}
+.banner .text input{
+    margin-top: 20px;
+    background: transparent;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    transition: color 300ms;
+}
+.banner .text input:hover{
+    color: #7a7a7a;
+}
+.img__icon_dollar{
+    height: 100%;
+    position: absolute;
+    right: 10px;
+    overflow: hidden;
+}
+#icon{
+    width: 400px;
+    margin-top: 80px;
+    position: relative;
+    filter: drop-shadow(-40px 0px 30px rgba(0,0,0,0.5));
+}
+#icon_dollar{
+    width: 300px;
+    position: relative;
+    margin-top: -100px;
+    opacity: 0.6;
+}
+/* Fin Parallax */
+/* Pie de Pagina */
+footer{
+    width: 100%;
+    padding: 50px 0px;
+    background-image: url(../../img/background-footer.svg);
+    background-size: cover;
+}
+.container__footer{
+    display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+    max-width: 1200px;
+    margin: auto;
+    margin-top: 100px;
 }
-.cardd .boton{
-    background: rgba(52,58,64,255);
-    color: #fff;
-	display: block;
-	width: 100%;
-	font-weight: bold;
-	font-size: 14px;
-	text-align: center;
-	padding: 10px;
-	border: none;
-	border-radius: 100px;
-	font-family: 'Roboto', sans-serif;
-	cursor: pointer;
-}
-.banner {
-	border-radius: 10px;
-	text-align: center;
-	padding: 20px;
-	background-size: cover;
-	background-position: center center;
-    width: 30%;
-    color: #fff;
+
+.box__footer{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-
+    padding: 20px;
 }
 
-.banner ul {
-	list-style: none;
+.box__footer .logo img{
+    width: 100px;
 }
 
-.banner ul li {
-	margin: 15px;
-	font-weight: bold;
+.box__footer .terms{
+    max-width: 350px;
+    margin-top: 20px;
+    font-weight: 500;
+    color: #7a7a7a;
+    font-size: 18px;
 }
 
-.banner .boton {
-	background: rgba(52,58,64,255);
-    color: #fff;
-	display: block;
-	width: 100%;
-	font-weight: bold;
-	font-size: 14px;
-	text-align: center;
-	padding: 10px;
-	border: none;
-	border-radius: 100px;
-	font-family: 'Roboto', sans-serif;
-	cursor: pointer;
+.box__footer h2{
+    margin-bottom: 30px;
+    color: #343434;
+    font-weight: 700;
 }
+
+.box__footer a{
+    margin-top: 10px;
+    color: #7a7a7a;
+    font-weight: 600;
+}
+
+.box__footer a:hover{
+    opacity: 0.8;
+}
+
+.box__footer a .fab{
+    font-size: 20px;
+}
+
+.box__copyright{
+    max-width: 1200px;
+    margin: auto;
+    text-align: center;
+    padding: 0px 40px;
+}
+
+.box__copyright p{
+    margin-top: 20px;
+    color: #7a7a7a;
+}
+
+.box__copyright hr{
+    border: none;
+    height: 1px;
+    background-color: #7a7a7a;
+}
+/* Fin Pie de Pagina*/
