--- a/configuracion/css/estilos_dashboard.css
+++ b/configuracion/css/estilos_dashboard.css
@@ -8,26 +8,25 @@
 }
 h2{
     text-align: center;
-    margin-bottom: 20px;
+   
 }
-section .tables{
+/*.tables{
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 1300px;
+    max-width: 1100px;
     margin: auto;
-}
-
+}*/
 table{
     border-spacing: 1; 
     border-collapse: collapse; 
     background:white;
     border-radius:6px;
     overflow:hidden;
-    max-width:500px; 
+    max-width:800px; 
     width:100%;
     margin: auto;
-    margin-bottom: 10px;
+    margin-bottom: 12px;
 }
 td{
     padding-left: 8px;
@@ -54,4 +53,34 @@ table tbody tr td li{
 }
 table tbody tr td li a{
     color: #373737;
+}
+button{
+    padding: 10px 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 14px;
+    font-weight: 400;
+    border: none;
+    color: #fff;
+    background: #484e53;
+    border-radius: 20px;
+    box-shadow: 1px 1px 30px -5px #20202049;
+    cursor: pointer;
+    transition: box-shadow 500ms;
+}
+button li{
+    list-style: none;
+}
+button li a{
+    color: white;
+}
+@media screen and (max-width: 820px){
+    table{
+        transform: scale(0.9);
+    }
+}
+@media screen and (max-width: 720px){
+    table{
+       transform: scale(0.7);
+    }
 }
