--- a/configuracion/css/estilos_dashboard.css
+++ b/configuracion/css/estilos_dashboard.css
@@ -10,23 +10,34 @@ h2{
     text-align: center;
    
 }
-/*.tables{
+
+.tables{
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 1100px;
+    max-width: 1200px;
     margin: auto;
-}*/
-table{
+}
+.tables .table1 .tb_saldo{
     border-spacing: 1; 
     border-collapse: collapse; 
     background:white;
     border-radius:6px;
     overflow:hidden;
-    max-width:800px; 
+    max-width:500px; 
     width:100%;
     margin: auto;
-    margin-bottom: 12px;
+    
+}
+.tables .table2 .tb_historial{
+    border-spacing: 1; 
+    border-collapse: collapse; 
+    background:white;
+    border-radius:6px;
+    overflow:hidden;
+    max-width:700px; 
+    width:100%;
+    margin: auto;
 }
 td{
     padding-left: 8px;
@@ -57,7 +68,7 @@ table tbody tr td li a{
 button{
     padding: 10px 30px;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     font-size: 14px;
     font-weight: 400;
     border: none;
