--- a/configuracion/css/estilos_dashboard.css
+++ b/configuracion/css/estilos_dashboard.css
@@ -10,11 +10,19 @@ h2{
     text-align: center;
    
 }
-
-.tables{
+.table1, .table2{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    margin: 30px;
+}
+
+.tables{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+   
     max-width: 1200px;
     margin: auto;
 }
@@ -85,13 +93,14 @@ button li{
 button li a{
     color: white;
 }
-@media screen and (max-width: 820px){
-    table{
+@media screen and (max-width: 500px){
+    .tables{
         transform: scale(0.9);
     }
-}
-@media screen and (max-width: 720px){
-    table{
-       transform: scale(0.7);
+ }
+ @media screen and (max-width: 445px){
+    .tables{
+        transform: scale(0.8);
     }
-}
+ }
+
