--- a/configuracion/css/estilos_blog.css
+++ b/configuracion/css/estilos_blog.css
@@ -4,17 +4,17 @@
 .container__cards{
     max-width: 1200px;
     margin: auto;
-    margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 20%;
 }
 
 .card{
     width: 300px;
     height:100%;
     max-height: 600px;
-    margin: 10px;
+    margin: 25px;
     transition: all 300ms;
 }
 
