--- a/configuracion/css/estilos_dashboard.css
+++ b/configuracion/css/estilos_dashboard.css
@@ -9,21 +9,20 @@
 .tablesinfo{
     display:flex;
     flex-direction: column;
-    max-width: 800px;
+    margin:0px;
+   
 }
 .table1, .table2{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 30px;
+    margin:0px;
 }
 
 .tables{
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-   
+    flex-direction: column;
     max-width: 1200px;
     margin: auto;
 }
@@ -95,9 +94,8 @@ button li a{
     color: white;
 }
 .contenedor {
-	max-width: 100%;
-	width: 480px;
-	margin: 20px   30px   40px;
+	
+	margin: 0px 30px 0px -30px;
 	float: left;
 }
 
@@ -136,7 +134,7 @@ button li a{
 }
 @media screen and (max-width: 870px){
 .tables{
-    transform: scale(0.7);
+    transform: scale(0.8);
 }
 }
 @media screen and (max-width: 500px){
